[TEX] Progress on Sec. 3 [no ci]

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -666,3 +666,13 @@
   journal =      {SIAM Review (SIREV)},
   year =         2016,
 }
+
+@inproceedings{li2024dof,
+  title =        {{DOF}: Accelerating High-order Differential Operators with
+                  Forward Propagation},
+  author =       {Ruichen Li and Chuwei Wang and Haotian Ye and Di He and Liwei
+                  Wang},
+  booktitle =    {International Conference on Learning Representations (ICLR),
+                  Workshop on AI4DifferentialEquations In Science},
+  year =         2024,
+}
