--- a/paper/sections/background_pinns.tex
+++ b/paper/sections/background_pinns.tex
@@ -17,8 +17,9 @@ Activation layers map $\vz^{(l-1)}\mapsto \vz^{(l)} \sigma(\vz^{(l-1)})$ element
 \subsection{Energy Natural Gradients for Physics-Informed Neural Networks}
 Let us consider a domain $\Omega\subseteq\mathbb R^d$ and the partial differential equation
 \begin{align*}\tag{PE}\label{eq:PE}
-  -\mathcal{L} u & = f \quad \text{in }\Omega \\
-  u & = g \quad \text{on }\partial\Omega
+  -\mathcal{L} u = f \quad \text{in }\Omega\,,
+                   \qquad
+  u = g \quad \text{on }\partial\Omega\,,
 \end{align*}
 with square-integrable right hand side $f\in L^2(\Omega)$ and twice continuously differentiable boundary condition $g\in C^2(\Omega)\cap C(\overline{\Omega})$.
 $\mathcal{L}$ denotes a differential operator, e.g.\,the Laplacian $\mathcal{L} u = \Delta u = \sum_{i=1}^d \partial_{\evx_i}^2 u$.
