Update on Overleaf.

--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -91,7 +91,7 @@ Again, we observe that KFAC offers competitive performance compared with other s
 We consider Poisson equations in dimensions $d=5,10,100$ on the problems used in~\cite{yu2018deep, muller2023achieving}, which admit the solutions 
 \begin{align}\label{eq:solutions_poisson}
     \begin{split}
-        u^\star(\vx) & = \sum_{i=1}^5 \cos(\pi x_i)? \quad \text{for } \vx\in [0,1]^{5}, \\
+        u^\star(\vx) & = \sum_{i=1}^5 \cos(\pi x_i) \quad \text{for } \vx\in [0,1]^{5}, \\
         u^\star(\vx) & = \sum_{k=1}^5 x_{2k-1}x_{2k},  \quad \text{for } \vx\in [0,1]^{10} \\ 
         u^\star(\vx) & = \lVert \vx \rVert_2^2 \quad \text{for } \vx\in [0,1]^{100}, 
     \end{split}
